--- a/model.ipynb
+++ b/model.ipynb
@@ -6,12 +6,12 @@
       "source": [
         "# Time series forecasting\n",
         "\n",
-        "## Score: .2582"
+        "## Score: .2625"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -105,7 +105,7 @@
               "0"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -195,16 +195,16 @@
           "text": [
             "\n",
             ">>> Training horizon = 1\n",
-            "Horizon 1 Score: 0.07905\n",
+            "Horizon 1 Score: 0.08931\n",
             "\n",
             ">>> Training horizon = 3\n",
-            "Horizon 3 Score: 0.12589\n",
+            "Horizon 3 Score: 0.12833\n",
             "\n",
             ">>> Training horizon = 10\n",
-            "Horizon 10 Score: 0.22238\n",
+            "Horizon 10 Score: 0.22463\n",
             "\n",
             ">>> Training horizon = 25\n",
-            "Horizon 25 Score: 0.25210\n"
+            "Horizon 25 Score: 0.24478\n"
           ]
         }
       ],
@@ -236,8 +236,13 @@
         "    val_mask = ~fit_mask\n",
         "\n",
         "    X_fit = tr_df.loc[fit_mask, feature_cols]\n",
-        "    y_fit = tr_df.loc[fit_mask, 'y_target']\n",
-        "    w_fit = tr_df.loc[fit_mask, 'weight']\n",
+        "    y_fit = tr_df.loc[fit_mask, 'y_target'].values.astype(np.float64)\n",
+        "    w_fit = tr_df.loc[fit_mask, 'weight'].values.astype(np.float64)\n",
+        "    fit_ts = tr_df.loc[fit_mask, 'ts_index'].values.astype(np.float64)\n",
+        "    scale = 0.5 + 0.5 * (fit_ts / fit_ts.max())\n",
+        "    w_fit_eff = w_fit * scale\n",
+        "    q_low, q_high = np.percentile(y_fit, [0.1, 99.9])\n",
+        "    y_fit_eff = np.clip(y_fit, q_low, q_high)\n",
         "    X_hold = tr_df.loc[val_mask, feature_cols]\n",
         "    y_hold = tr_df.loc[val_mask, 'y_target']\n",
         "    w_hold = tr_df.loc[val_mask, 'weight']\n",
@@ -253,8 +258,8 @@
         "    for seed in SEEDS:\n",
         "        mdl = lgb.LGBMRegressor(**cfg, random_state=seed, n_jobs=-1)\n",
         "        mdl.fit(\n",
-        "            X_fit, y_fit,\n",
-        "            sample_weight=w_fit,\n",
+        "            X_fit, y_fit_eff,\n",
+        "            sample_weight=w_fit_eff,\n",
         "            eval_set=[(X_hold, y_hold)],\n",
         "            eval_sample_weight=[w_hold],\n",
         "            callbacks=[lgb.early_stopping(300, verbose=False)]\n",
@@ -278,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -287,21 +292,21 @@
           "text": [
             "\n",
             "========================================\n",
-            "FINAL AGGREGATE SCORE: 0.222450\n",
+            "FINAL AGGREGATE SCORE: 0.219344\n",
             "========================================\n",
             "Submission shape: (1447107, 2) (rows in id order)\n",
             "First 10 rows:\n",
             "                                       id  prediction\n",
-            "0  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4175   -0.348001\n",
-            "1  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4176   -0.464516\n",
-            "2  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4177   -0.575242\n",
-            "3  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4178   -0.561352\n",
-            "4  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4179   -0.624897\n",
-            "5  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4180   -0.603208\n",
-            "6  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4182   -0.708263\n",
-            "7  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4183   -0.677315\n",
-            "8  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4184   -0.654732\n",
-            "9  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4185   -0.812249\n"
+            "0  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4175   -0.335566\n",
+            "1  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4176   -0.418452\n",
+            "2  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4177   -0.433591\n",
+            "3  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4178   -0.505239\n",
+            "4  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4179   -0.532263\n",
+            "5  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4180   -0.546320\n",
+            "6  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4182   -0.602292\n",
+            "7  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4183   -0.574202\n",
+            "8  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4184   -0.585841\n",
+            "9  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4185   -0.629587\n"
           ]
         }
       ],
