--- a/model.ipynb
+++ b/model.ipynb
@@ -6,12 +6,12 @@
       "source": [
         "# Time series forecasting\n",
         "\n",
-        "## Score: .2625"
+        "## Score: .2642"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -105,7 +105,7 @@
               "0"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -180,13 +180,13 @@
         "    'lambda_l2': 10.0,\n",
         "    'verbosity': -1,\n",
         "}\n",
-        "SEEDS = (42, 2024, 7, 11, 999, 123, 456)\n",
-        "N_SEEDS = 7\n"
+        "SEEDS = (42, 2024, 7, 11, 999, 123, 456, 101, 2025)\n",
+        "N_SEEDS = 9\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -194,96 +194,110 @@
           "output_type": "stream",
           "text": [
             "\n",
-            ">>> Training horizon = 1\n",
-            "Horizon 1 Score: 0.08931\n",
+            ">>> cut=3400 horizon=1\n",
             "\n",
-            ">>> Training horizon = 3\n",
-            "Horizon 3 Score: 0.12833\n",
+            ">>> cut=3400 horizon=3\n",
             "\n",
-            ">>> Training horizon = 10\n",
-            "Horizon 10 Score: 0.22463\n",
+            ">>> cut=3400 horizon=10\n",
             "\n",
-            ">>> Training horizon = 25\n",
-            "Horizon 25 Score: 0.24478\n"
+            ">>> cut=3400 horizon=25\n",
+            "\n",
+            ">>> cut=3500 horizon=1\n",
+            "Horizon 1 Score: 0.08873\n",
+            "\n",
+            ">>> cut=3500 horizon=3\n",
+            "Horizon 3 Score: 0.12900\n",
+            "\n",
+            ">>> cut=3500 horizon=10\n",
+            "Horizon 10 Score: 0.22413\n",
+            "\n",
+            ">>> cut=3500 horizon=25\n",
+            "Horizon 25 Score: 0.24642\n",
+            "\n",
+            ">>> cut=3600 horizon=1\n",
+            "\n",
+            ">>> cut=3600 horizon=3\n",
+            "\n",
+            ">>> cut=3600 horizon=10\n",
+            "\n",
+            ">>> cut=3600 horizon=25\n"
           ]
         }
       ],
       "source": [
         "forecast_windows = [1, 3, 10, 25]\n",
-        "test_outputs = []\n",
+        "VAL_THRESHOLDS = [3400, 3500, 3600]\n",
         "cv_cache = {'y': [], 'pred': [], 'wt': []}\n",
+        "preds_by_hz = [[] for _ in range(4)]\n",
+        "te_ids_by_hz = [None] * 4\n",
         "\n",
-        "for hz in forecast_windows:\n",
-        "    print(f'\\n>>> Training horizon = {hz}')\n",
-        "    tr_df = build_context_features(\n",
-        "        pd.read_parquet(TRAIN_PATH).query(f'horizon == {hz}'),\n",
-        "        train_stats\n",
-        "    )\n",
-        "    te_df = build_context_features(\n",
-        "        pd.read_parquet(TEST_PATH).query(f'horizon == {hz}'),\n",
-        "        train_stats\n",
-        "    )\n",
-        "\n",
-        "    feature_cols = [\n",
-        "        c for c in tr_df.columns\n",
-        "        if c not in {'id', 'code', 'sub_code', 'sub_category', 'horizon', 'ts_index', 'weight', 'y_target'}\n",
-        "    ]\n",
-        "    for c in feature_cols:\n",
-        "        tr_df[c] = tr_df[c].fillna(0).astype(np.float32)\n",
-        "        te_df[c] = te_df[c].fillna(0).astype(np.float32)\n",
-        "\n",
-        "    fit_mask = tr_df['ts_index'] <= VAL_THRESHOLD\n",
-        "    val_mask = ~fit_mask\n",
-        "\n",
-        "    X_fit = tr_df.loc[fit_mask, feature_cols]\n",
-        "    y_fit = tr_df.loc[fit_mask, 'y_target'].values.astype(np.float64)\n",
-        "    w_fit = tr_df.loc[fit_mask, 'weight'].values.astype(np.float64)\n",
-        "    fit_ts = tr_df.loc[fit_mask, 'ts_index'].values.astype(np.float64)\n",
-        "    scale = 0.5 + 0.5 * (fit_ts / fit_ts.max())\n",
-        "    w_fit_eff = w_fit * scale\n",
-        "    q_low, q_high = np.percentile(y_fit, [0.1, 99.9])\n",
-        "    y_fit_eff = np.clip(y_fit, q_low, q_high)\n",
-        "    X_hold = tr_df.loc[val_mask, feature_cols]\n",
-        "    y_hold = tr_df.loc[val_mask, 'y_target']\n",
-        "    w_hold = tr_df.loc[val_mask, 'weight']\n",
-        "\n",
-        "    val_pred = np.zeros(len(y_hold), dtype=np.float64)\n",
-        "    tst_pred = np.zeros(len(te_df), dtype=np.float64)\n",
-        "\n",
-        "    cfg = dict(LGB_CFG)\n",
-        "    if hz in (10, 25):\n",
-        "        cfg = {**cfg, 'learning_rate': 0.012, 'n_estimators': 7500, 'num_leaves': 160,\n",
-        "               'min_child_samples': 100, 'lambda_l2': 15.0}\n",
-        "\n",
-        "    for seed in SEEDS:\n",
-        "        mdl = lgb.LGBMRegressor(**cfg, random_state=seed, n_jobs=-1)\n",
-        "        mdl.fit(\n",
-        "            X_fit, y_fit_eff,\n",
-        "            sample_weight=w_fit_eff,\n",
-        "            eval_set=[(X_hold, y_hold)],\n",
-        "            eval_sample_weight=[w_hold],\n",
-        "            callbacks=[lgb.early_stopping(300, verbose=False)]\n",
+        "for thresh in VAL_THRESHOLDS:\n",
+        "    for hz_idx, hz in enumerate(forecast_windows):\n",
+        "        print(f'\\n>>> cut={thresh} horizon={hz}')\n",
+        "        tr_df = build_context_features(\n",
+        "            pd.read_parquet(TRAIN_PATH).query(f'horizon == {hz}'),\n",
+        "            train_stats\n",
         "        )\n",
-        "        val_pred += mdl.predict(X_hold).astype(np.float64) / N_SEEDS\n",
-        "        tst_pred += mdl.predict(te_df[feature_cols]).astype(np.float64) / N_SEEDS\n",
-        "        del mdl\n",
+        "        te_df = build_context_features(\n",
+        "            pd.read_parquet(TEST_PATH).query(f'horizon == {hz}'),\n",
+        "            train_stats\n",
+        "        )\n",
+        "        feature_cols = [c for c in tr_df.columns if c not in {'id', 'code', 'sub_code', 'sub_category', 'horizon', 'ts_index', 'weight', 'y_target'}]\n",
+        "        for c in feature_cols:\n",
+        "            tr_df[c] = tr_df[c].fillna(0).astype(np.float32)\n",
+        "            te_df[c] = te_df[c].fillna(0).astype(np.float32)\n",
+        "        fit_mask = tr_df['ts_index'] <= thresh\n",
+        "        val_mask = ~fit_mask\n",
+        "        X_fit = tr_df.loc[fit_mask, feature_cols]\n",
+        "        y_fit = tr_df.loc[fit_mask, 'y_target'].values.astype(np.float64)\n",
+        "        w_fit = tr_df.loc[fit_mask, 'weight'].values.astype(np.float64)\n",
+        "        fit_ts = tr_df.loc[fit_mask, 'ts_index'].values.astype(np.float64)\n",
+        "        scale = 0.5 + 0.5 * (fit_ts / (fit_ts.max() + 1e-9))\n",
+        "        w_fit_eff = w_fit * scale\n",
+        "        q_low, q_high = np.percentile(y_fit, [0.1, 99.9])\n",
+        "        y_fit_eff = np.clip(y_fit, q_low, q_high)\n",
+        "        X_hold = tr_df.loc[val_mask, feature_cols]\n",
+        "        y_hold = tr_df.loc[val_mask, 'y_target']\n",
+        "        w_hold = tr_df.loc[val_mask, 'weight']\n",
+        "        val_pred = np.zeros(len(y_hold), dtype=np.float64)\n",
+        "        tst_pred = np.zeros(len(te_df), dtype=np.float64)\n",
+        "        cfg = dict(LGB_CFG)\n",
+        "        if hz in (10, 25):\n",
+        "            cfg = {**cfg, 'learning_rate': 0.012, 'n_estimators': 7500, 'num_leaves': 160, 'min_child_samples': 100, 'lambda_l2': 15.0}\n",
+        "        for seed in SEEDS:\n",
+        "            mdl = lgb.LGBMRegressor(**cfg, random_state=seed, n_jobs=-1)\n",
+        "            mdl.fit(X_fit, y_fit_eff, sample_weight=w_fit_eff, eval_set=[(X_hold, y_hold)], eval_sample_weight=[w_hold], callbacks=[lgb.early_stopping(400, verbose=False)])\n",
+        "            val_pred += mdl.predict(X_hold).astype(np.float64) / N_SEEDS\n",
+        "            tst_pred += mdl.predict(te_df[feature_cols]).astype(np.float64) / N_SEEDS\n",
+        "            del mdl\n",
+        "            gc.collect()\n",
+        "        if hz in (10, 25):\n",
+        "            cfg2 = {**dict(LGB_CFG), 'learning_rate': 0.01, 'n_estimators': 9000, 'num_leaves': 128, 'min_child_samples': 120, 'lambda_l2': 20.0}\n",
+        "            tst_pred2 = np.zeros(len(te_df), dtype=np.float64)\n",
+        "            for seed in SEEDS:\n",
+        "                mdl = lgb.LGBMRegressor(**cfg2, random_state=seed, n_jobs=-1)\n",
+        "                mdl.fit(X_fit, y_fit_eff, sample_weight=w_fit_eff, eval_set=[(X_hold, y_hold)], eval_sample_weight=[w_hold], callbacks=[lgb.early_stopping(400, verbose=False)])\n",
+        "                tst_pred2 += mdl.predict(te_df[feature_cols]).astype(np.float64) / N_SEEDS\n",
+        "                del mdl\n",
+        "                gc.collect()\n",
+        "            tst_pred = 0.5 * tst_pred + 0.5 * tst_pred2\n",
+        "        if te_ids_by_hz[hz_idx] is None:\n",
+        "            te_ids_by_hz[hz_idx] = te_df['id'].values\n",
+        "        preds_by_hz[hz_idx].append(tst_pred.copy())\n",
+        "        if thresh == 3500:\n",
+        "            print(f'Horizon {hz} Score: {weighted_rmse_score(y_hold, val_pred, w_hold):.5f}')\n",
+        "            cv_cache['y'].extend(y_hold.tolist())\n",
+        "            cv_cache['pred'].extend(val_pred.tolist())\n",
+        "            cv_cache['wt'].extend(w_hold.tolist())\n",
+        "        del tr_df, te_df, X_fit, y_fit, w_fit, X_hold, y_hold, w_hold\n",
         "        gc.collect()\n",
         "\n",
-        "    print(f'Horizon {hz} Score: {weighted_rmse_score(y_hold, val_pred, w_hold):.5f}')\n",
-        "\n",
-        "    cv_cache['y'].extend(y_hold.tolist())\n",
-        "    cv_cache['pred'].extend(val_pred.tolist())\n",
-        "    cv_cache['wt'].extend(w_hold.tolist())\n",
-        "\n",
-        "    test_outputs.append(pd.DataFrame({'id': te_df['id'].values, 'prediction': tst_pred}))\n",
-        "\n",
-        "    del tr_df, te_df, X_fit, y_fit, w_fit, X_hold, y_hold, w_hold\n",
-        "    gc.collect()"
+        "test_outputs = [pd.DataFrame({'id': te_ids_by_hz[i], 'prediction': np.mean(preds_by_hz[i], axis=0)}) for i in range(4)]\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -292,21 +306,21 @@
           "text": [
             "\n",
             "========================================\n",
-            "FINAL AGGREGATE SCORE: 0.219344\n",
+            "FINAL AGGREGATE SCORE: 0.220172\n",
             "========================================\n",
             "Submission shape: (1447107, 2) (rows in id order)\n",
             "First 10 rows:\n",
             "                                       id  prediction\n",
-            "0  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4175   -0.335566\n",
-            "1  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4176   -0.418452\n",
-            "2  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4177   -0.433591\n",
-            "3  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4178   -0.505239\n",
-            "4  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4179   -0.532263\n",
-            "5  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4180   -0.546320\n",
-            "6  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4182   -0.602292\n",
-            "7  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4183   -0.574202\n",
-            "8  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4184   -0.585841\n",
-            "9  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4185   -0.629587\n"
+            "0  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4175   -0.191028\n",
+            "1  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4176   -0.260256\n",
+            "2  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4177   -0.325372\n",
+            "3  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4178   -0.340458\n",
+            "4  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4179   -0.361463\n",
+            "5  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4180   -0.360965\n",
+            "6  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4182   -0.390918\n",
+            "7  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4183   -0.383802\n",
+            "8  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4184   -0.388043\n",
+            "9  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4185   -0.426644\n"
           ]
         }
       ],
